# UnlimSoft_test_task

./: .coveragerc  .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests_and_deploy.yml
migrations/: env.py
migrations/versions/: 77bfe24129f1_init_db.py  d77a6eddb542_add_weather_in_city.py
src/: asgi.py  config.py  database.py  external_requests.py  main.py
src/api/: city.py  picnic.py  urls.py
src/api/user/: __init__.py  relationships.py  user.py
src/exceptions/: bad_request.py
src/managers/: base.py  city.py  picnic.py
src/managers/user/: __init__.py  relationships.py  user.py
src/models/: __init__.py  city.py  picnic.py
src/models/user/: relationships.py  user.py
src/schema/: __init__.py  city.py  picnic.py  user.py  weather.py
src/schema/user/: __init__.py  relationships.py  user.py
src/tasks/: __init__.py  city.py
tests/: conftest.py
tests/fixtures/: city.py  picnic.py  user.py
tests/test_api/: test_city.py  test_picnic.py
tests/test_api/test_user/: test_relationships.py  test_user.py
